--- a/analysis/qmd/analysis.qmd
+++ b/analysis/qmd/analysis.qmd
@@ -97,3 +97,70 @@ After factoring in a **3.5%** monthly email list growth rate, we can expect the 
 We can see the high cost of this problem which is the lost revenue to the business. However, the values shown in the table above do not factor in uncertainty. We can thus improve on our cost assessment by factoring in uncertainty in some of the drivers. Let assume some monthly variablity in email list growth rate and conversion rate. The heatmap below shows a cost simulation with variablity. The y-axis represents various levels of customer converstion rate while the x-axis represents various levels of email list growth rate;
 
 ![Cost Simulation](png/cost/cost_simulation.png){width=90% fig-align="center" .shaded-border}
+
+We can see that regardless of how the drivers vary, we can still expect to see annual costs ranging from **$2.61M** to **$4.38M**. Thus this is definitely a problem worth solving.
+
+At this point, a key question is *"can we reduce the unsubscribe rate?"*. Recall that the business is loosing **500** customers for every email sent out. What if we can reduce that number by **50%** (or **250**), while maintaning **90%** of revenue. What impact will that have on the business?
+
+The only problem is that we still do not know a lot about what causes a subscriber to make a purchase. If we do, we can focus on targeting the ones that are more likely to purchase with sales emails and nurture the ones who are unlikely to covert at the moment. This will help with our goal of reducing the unsubsbribe rate while maintaning **90%** of revenue.
+
+---
+
+# Data Understanding
+
+::: {.callout-note title="BSPF Phase: Understanding the Drivers"}
+This section falls under the **Understand The Drivers** Phase of the BSPF
+:::
+
+This phase requires understanding the data available at our disposal to tackle this problem. The visual below gives an overview of the company's crm database including table and field descriptions. Connecting arrows show how each table can be linked to other tables based on common fields.
+
+![](png/other/crm_database.png){width=90% fig-align="center" .shaded-border}
+
+::: {.callout-important}
+**Note:** We will not be using the `website` table in this project.
+:::
+
+---
+
+## Exploratory Data Analysis
+
+
+After some initial data manipulation to get the data in the right format we need for analysis, including adding a target feature which is a binary flag of if a user has made a previous purchase or not (we'll call this target feature `made_purchase`), we can then begin to do some initial exploratory analysis to get a sense what features in our dataset could be predictive of users making a purchase.
+
+First lets analyze our target feature `made_purchase`.
+
+### Proportion of Users with Previous Purchase
+
+![](png/eda/made_purchase_prop.png){width=80% fig-align="center" .shaded-border}
+
+**Observation:** Only **5%** of customers have made a previous purchase, meaning we are dealing with a highligh [imbalanced dataset](https://developers.google.com/machine-learning/data-prep/construct/sampling-splitting/imbalanced-data).
+
+### Member Rating vs Made Purchase
+
+The plot below shows the different values of `member_rating` vs the proportion of `made_purchase` for users with each value of `member_rating` -
+
+![](png/eda/member_rating_vs_made_purchase.png){width=80% fig-align="center" .shaded-border}
+
+**Observation:** `member_rating` appears to be quite predictive of `made_purchase`. We can see that the likelihood of a user making a purchase increases 3x when the `member_rating` goes from 1 to 2. Additionally the likelihood of making a purchase increases 5x when the `member_rating` goes from 2 to 5.
+
+### Country Code vs Made Purchase
+The plot below shows `country_code` along with the within group `made_purchase` proportion, for the top 10 countries in terms of count of users -
+
+![](png/eda/country_code_vs_made_purchase.png){width=80% fig-align="center" .shaded-border}
+
+**Observation:** `country_code` also appears to be quite predictive of `made_purchase` as well.For example we can see that while the US has the most users (over 3,500), the proportion of US users who have made a purchase is ~10%. However a country like AU which has less than 500 users has a higher proprtion of users who have made a purchase (~12%).
+
+### Tag Count vs Made Purchase
+The plot below shows `tag_count` along with the within group `made_purchase` proportion, for a selected number of `tag_count`. Recall that tags here refer to various events like trainings and webinars. Therefore `tag_count` refers to the number of such events a user has attended -
+
+![](png/eda/tags_vs_made_purchase.png){width=80% fig-align="center" .shaded-border}
+
+**Observation:** We can see that if a subscriber has 40 or more tags (events), they are 100% likely to make a purchase. That likelihood drops as `tag_count` decreases. Note that a subscriber with 0 tags only have a 2% likelihood of making a purchase. For those with 0 tags (meaning they have not attended any events yet) we may not want to send them emails just yet. We may want to try and nurture them to attend more events before trying to get them to make a purchase. Overall if the business can get subscribers to attend more events, it drastically increases their likelihood of making a purchase.
+
+
+### Correlation
+The plot below is a correlation heatmap of numberic features only -
+
+![](png/eda/corr_heatmap.png){width=80% fig-align="center" .shaded-border}
+
+**Observation**: These correlation values further validatates some of the data we saw earlier. We can see that `tag_count` and `member_rating` do show a fairly high correlation with `made_purchase`.
